# OOP-PROJECT

./: .gitignore  AntiMagicSword.cpp  AntiMagicSword.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  FireMagic.cpp  FireMagic.h  Game.cpp  Game.h  Level.cpp  Level.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h  Player.cpp  Player.h  Readme.md  SaveManager.cpp  SaveManager.h  Spell.cpp  Spell.h  WindMagic.cpp  WindMagic.h  asta_adventure_save.txt  asta_combat_log.txt  asta_highscore.txt  main.cpp
